# django-user-auth

./: Dockerfile  README.md  fly.toml  pyproject.toml
website/: db.sqlite3
website/main/: apps.py  forms.py  urls.py  views.py
website/main/migrations/: 0001_initial.py
website/main/templates/main/: base.html  create_post.html  home.html
website/main/templates/registration/: login.html  sign_up.html
website/website/: settings.py  urls.py
